--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ layout: default
 
         <h2>
           {% if post.external-url %}
-            <a class="post-link" href="{{ post.external-url }}">{{ post.title | escape }} &rarr;</a>
+            <a class="post-link" href="{{ post.external-url }}">{{ post.title | escape }}</a>
           {% else %}
             <a class="post-link" href="{{ post.url | relative_url }}"{% if lang != empty %} lang="{{ lang }}"{% endif %}>{{ post.title | escape }}</a>
           {% endif %}
