--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -9,7 +9,12 @@ dl, dd, ol, ul, figure {
 
 }
 
-
+.center-image
+{
+    text-align: center;
+    // margin: 0 auto;
+    display: block;
+}
 
 /**
  * Basic styling
